--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Jeroen Mostert
 
 # Short bio or description (displayed in the header)
-description: A World without Butterflies
+description: ∀x ∈ N (0≠S(x))
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: 
